# Project_MLOps_G55

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dvc.yaml  link_model.py  pyproject.toml  requirements.txt  tasks.py  utils.md
.dvc/: config
.github/workflows/: build-image.yaml  cml_data.yaml  codecheck.yaml  stage_model.yaml  tests.yaml
configs/: hydra_cfg.yaml  model_cfg.yaml  train_cfg.yaml
dockerfiles/: evaluate.dockerfile  train_cpu.dockerfile  train_gpu.dockerfile  vertex_train.dockerfile
outputs/2026-01-09/17-05-44/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-09/17-06-21/.hydra/: hydra.yaml
reports/: README.md
src/proj/: data.py  data_module.py  dataset_statistics.py  distributed_training.py  evaluate.py  lightning_model.py  link_model.py  model.py  optimize_inference.py  train.py  train_lightning.py
src/proj/api/: export_onnx.py
src/proj/api/bento/: bentofile.yaml  service.py  test_service.py
tests/: __init__.py  check_registry_model.py  test_api.py  test_data.py  test_evaluate.py  test_model.py  test_train.py
tests/performancetests/: test_model.py
